修改POList参数名称、修改导出pdf数据模型，导出模板。

--- a/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/ChangeDetails.cshtml
+++ b/KingPlatform/Areas/HuaweiOrderManage/Views/FindPOList/ChangeDetails.cshtml
@@ -5,11 +5,11 @@
 <script>
     var poNumber = $.request("poNumber");
     var poLineNum = $.request("poLineNum");
-    var types = $.request("types");
+    var poTypes = $.request("poTypes");
     $(function () {
         $.ajax({
             url: "/HuaweiOrderManage/FindPOList/FindColTask",
-            data: { poNumber: poNumber, poLineNum: poLineNum, types: types },
+            data: { poNumber: poNumber, poLineNum: poLineNum, poTypes: poTypes },
             dataType: "json",
             async: false,
             success: function (data) {
