--- a/KingPlatform/Views/Shared/_Form.cshtml
+++ b/KingPlatform/Views/Shared/_Form.cshtml
@@ -17,7 +17,9 @@
     <link href="~/Content/js/wizard/wizard.css" rel="stylesheet" />
     <script src="~/Content/js/wizard/wizard.js"></script>
     <script src="~/Content/js/validate/jquery.validate.min.js"></script>
-    <script src="~/Content/js/datepicker/WdatePicker.js"></script>
+    <script src="~/Content/js/datepicker/bootstrap-datepicker.js"></script>
+    <link href="~/Content/js/datepicker/bootstrap-datepicker.min.css" rel="stylesheet" />
+    <script src="~/Content/js/datepicker/locales/bootstrap-datepicker.zh-CN.js"></script>
     <link href="~/Content/css/framework-ui.css" rel="stylesheet" />
     <script src="~/Content/js/framework-ui.js"></script>
 </head>
